<resources>
    <string name="app_name">Sooriya Sales &amp; Inventory</string>
    <string name="Add_New">Add Item</string>
    <string name="edit">Edit Item</string>
    <string name="delete">Delete Item</string>
    <string name="name">Item</string>
    <string name="qty">Quantity</string>
    <string name="unitPrice">UnitPrice</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="deleteItem">Do you want to delete it ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>