<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    tools:context=".ViewInventory">



    <TextView
        android:id="@+id/txtItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/txtUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="170dp"
        android:text="@string/unitPrice"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <EditText
        android:id="@+id/editItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="number" />


    <EditText
        android:id="@+id/editUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="350dp"
        android:onClick="run"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="350dp"
        android:onClick="reset"
        android:text="@string/reset" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        app:srcCompat="@drawable/sooriya_logo" />
</RelativeLayout>